# apriltag-pose-estimator

./: .gitignore  README.md  example_usage.py  live_localization_demo.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  release.yml
apriltag_pose_estimator/: __init__.py  camera_calibration.py  fusion.py  pose_estimator.py  tag_map.py  utils.py
config/: camera_calibration_rpi.yaml  my_camera.yaml  tag_map_example.json
tests/: conftest.py  test_camera_calibration.py  test_fusion.py  test_pose_estimator.py  test_tag_map.py  test_utils.py
