[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "apriltag-pose-estimator"
version = "0.1"
description = "Fast 2D robot pose estimation using AprilTags with known positions"
readme = "README.md"
requires-python = ">=3.9"
license = "GPL-3.0-only"
authors = [{name = "Ilo Japar", email = "iloe@hku.hk"}]
dependencies = [
    "opencv-python>=4.6.0",
    "numpy>=1.21.0",
    "PyYAML>=6.0",
    "pupil-apriltags>=1.0.4",
]

[project.urls]
Repository = "https://github.com/iloevera/apriltag-pose-estimator"
Issues = "https://github.com/iloevera/apriltag-pose-estimator/issues"

[tool.setuptools.packages.find]
include = ["apriltag_pose_estimator*"]
exclude = ["config*", "examples*", "tests*"]